2013-06-19 (0.1-1) Marcos Prates <marcosop@est.ufmg.br>, Luis Gustavo Silva <lgsilvaesilva@gmail.com> and Marcelo Azevedo <macosta.est@gmail.com>

	* first public release